Fix localization configuration and suppress warnings

--- a/lib/l10n/app_ha.arb
+++ b/lib/l10n/app_ha.arb
@@ -1,84 +1,72 @@
 ﻿{
   "@@locale": "ha",
-  "appTitle": "FertiPath",
+  "appTitle": "Nexus Fertility",
   "welcome": "Barka da zuwa",
   "home": "Gida",
-  "calendar": "Kalanda",
-  "profile": "Bayanin martaba",
   "settings": "Saituna",
-  "tracking": "Bin diddigi",
-  "predictions": "Hasashe",
-  "education": "Ilmi",
-  "support": "Taimako",
-  "login": "Shiga",
-  "signup": "Yi rajista",
+  "language": "Harshe",
+  "english": "Turanci",
+  "yoruba": "Yoruba",
+  "igbo": "Igbo",
+  "hausa": "Hausa",
+  "pidgin": "Pidgin",
+  "selectLanguage": "Zaɓi Harshe",
+  "next": "Gaba",
+  "back": "Baya",
+  "skip": "Tsallake",
+  "done": "Gama",
+  "createAccount": "Ƙirƙiri Asusu",
+  "signIn": "Shiga",
   "email": "Imel",
-  "password": "Kalmar wucewa",
-  "createAccount": "Ƙirƙiri Asusun",
-  "choosePreferredMethod": "Zaɓi hanyar da kake so",
-  "createAccountWithEmail": "Ƙirƙiri asusu ta imel",
-  "createAccountWithPhone": "Ƙirƙiri asusu ta waya",
+  "phoneNumber": "Lambar Waya",
+  "password": "Kalmar Sirri",
+  "confirmPassword": "Tabbatar da Kalmar Sirri",
+  "firstName": "Suna na Gida",
+  "lastName": "Suna Dangida",
+  "profile": "Bayanin Martaba",
+  "logout": "Fita",
+  "save": "Ajiye",
+  "cancel": "Soke",
+  "ok": "To",
+  "error": "Kuskure",
+  "success": "Nasara",
+  "loading": "Yana lodini...",
+  "tryAgain": "Gwada Sake",
+  "selectOption": "Zaɓi wani zaɓi",
   "verifyPhoneTitle": "Tabbatar da Lambar Waya",
-  "codeSentToPhone": "An aika lambar zuwa {phone}",
+  "codeSentToPhone": "An aika lambar tabbatarwa zuwa {phone}",
   "@codeSentToPhone": {
+    "description": "Message indicating a code was sent",
     "placeholders": {
-      "phone": {"type": "String"}
+      "phone": {
+        "type": "String",
+        "example": "+234803..."
+      }
     }
   },
-  "codeExpiresIn": "Lambar za ta ƙare cikin {time}",
+  "codeExpiresIn": "Lambar ta ɗau a nan {minutes} minutes",
   "@codeExpiresIn": {
+    "description": "Message showing code expiration time",
     "placeholders": {
-      "time": { "type": "String" }
+      "minutes": {
+        "type": "int",
+        "example": "5"
+      }
     }
   },
   "verify": "Tabbatar",
-  "didntReceiveCode": "Ba ka samu lambar ba?",
-  "myProfile": "Profayil ɗina",
-  "profileSetup": "Saitin profayil",
-  "profileSetupComplete": "An kammala saita bayanin martaba",
-  "personalInformation": "Bayanin Kai",
-  "fullName": "Cikakken suna",
-  "birthDate": "Ranar haihuwa",
-  "selectOption": "Zaɓi zaɓi",
-  "symptoms": "Alamomi",
-  "logSymptom": "Rubuta alamomi",
-  "mood": "Yanayi",
-  "energy": "Ƙarfi",
-  "pain": "Ciwo",
-  "notes": "Bayanan",
-  "educationalHub": "Cibiyar Ilimi",
-  "articles": "Makaloli",
-  "fertilityBasics": "Asalin haihuwa",
-  "save": "Ajiye",
-  "cancel": "Soke",
-  "delete": "Goge",
-  "edit": "Gyara",
-  "update": "Sabuntawa",
-  "continue": "Ci gaba",
+  "didntReceiveCode": "Ba ku karbi lambar ba?",
+  "choosePreferredMethod": "Zaɓi hanyar signup da ke so",
+  "createAccountWithEmail": "Ƙirƙiri asusu tare da Email",
+  "createAccountWithPhone": "Ƙirƙiri asusu tare da Waya",
+  "selectDate": "Zaɓi Kwana",
   "continueText": "Ci gaba",
-  "selectDate": "Zaɓi Ranar",
-  "selectDateButton": "Zaɓi kwanan wata",
-  "selectedDate": "An zaɓi kwanan wata: {date}",
-  "@selectedDate": {
-    "placeholders": {
-      "date": { "type": "String" }
-    }
-  },
-  "success": "Nasara",
-  "error": "Kuskure",
-  "requiredField": "Wannan shafi yana da mahimmanci",
-  "noData": "Babu bayanai",
-  "refresh": "Sabunta",
-  "authInvalidEmail": "Imel ɗin bai dace ba",
-  "authInvalidPhone": "Lambar waya ba ta dace ba",
-  "authPasswordTooShort": "Kalmar sirri dole ta kasance aƙalla haruffa 8",
-  "authEmailAlreadyRegistered": "An riga an yi rajista da wannan imel",
-  "authPhoneAlreadyRegistered": "An riga an yi rajista da wannan lambar waya",
-  "authInvalidOtpFormat": "Tsarin OTP bai dace ba",
-  "authUserNotFound": "Ba a sami mai amfani ba",
-  "authNoUserLoggedIn": "Babu mai amfani da ya shiga",
-  "authCodeInvalid": "Lambar tabbatarwa ba ta dace ba",
-  "authTooManyRequests": "Yawan buƙatu. Gwada daga baya"
+  "profileSetupComplete": "Setup bayanin martaba ya gama!",
+  "supportHub": "Gida na Taimakawa",
+  "dailyAffirmation": "Tabbatarwa ta Yau",
+  "stayPositive": "Kasance mai kyau da gaskata a kanka",
+  "exploreCommunityGroups": "Bincika Jama'o'i",
+  "chooseSupportMode": "Zaɓi Hanyar Taimakawa"
 }
 
 
