--- a/lib/l10n/app_ig.arb
+++ b/lib/l10n/app_ig.arb
@@ -1,184 +1,70 @@
-﻿{
+{
   "@@locale": "ig",
   "appTitle": "Nexus Fertility",
-  "welcomeTitle": "Nnọọ na Nexus Fertility",
-  "welcomeSubtitle": "Onye enyemaka ọmụmụ nke onwe gị",
-  "selectLanguage": "Họrọ Asụsụ",
-  "english": "English",
+  "welcome": "Nnọọ",
+  "home": "Ụlọ",
+  "settings": "Ntọgharịba",
+  "language": "Asụsụ",
+  "english": "Bekee",
   "yoruba": "Yoruba",
   "igbo": "Igbo",
   "hausa": "Hausa",
   "pidgin": "Pidgin",
-  "german": "Deutsch",
-  "next": "Osote",
-  "back": "Laghachi Azụ",
-  "skip": "Mafee",
-  "done": "Emechaa",
-  "createAccount": "Mepụta Akaụntụ",
+  "selectLanguage": "Họrọ Asụsụ Gị",
+  "next": "Ọzọ",
+  "back": "Laa azụ",
+  "skip": "Kpe ekpe",
+  "done": "Mezuo",
+  "createAccount": "Mepụta Akụ́ọtụ",
   "signIn": "Banye",
-  "email": "Email",
-  "phoneNumber": "Phone Number",
-  "password": "Password",
-  "confirmPassword": "Confirm Password",
-  "firstName": "First Name",
-  "lastName": "Last Name",
-  "dateOfBirth": "Date of Birth",
-  "selectDate": "Select Date",
-  "profilePicture": "Profile Picture",
-  "uploadPhoto": "Upload Photo",
-  "takePhoto": "Take Photo",
-  "chooseFromGallery": "Choose from Gallery",
-  "verifyEmail": "Verify Email",
-  "verifyPhone": "Verify Phone",
-  "enterOTP": "Enter OTP",
-  "otpSentTo": "OTP sent to {email}",
-  "@otpSentTo": {
-    "description": "Message shown after OTP is sent",
-    "placeholders": {
-      "email": {
-        "type": "String"
-      }
-    }
-  },
-  "resendCode": "Zigharia Koodu Ọzọ",
-  "codeExpires": "Koodu ga-agwụ na {minutes}:{seconds}",
-  "@codeExpires": {
-    "description": "Timer for OTP expiration",
-    "placeholders": {
-      "minutes": {
-        "type": "String"
-      },
-      "seconds": {
-        "type": "String"
-      }
-    }
-  },
-  "invalidEmail": "Biko tinye adreesị email ziri ezi",
-  "invalidPhone": "Biko tinye nọmba ekwentị ziri ezi",
-  "passwordMismatch": "Paswọọdụ adabaghị",
-  "passwordTooShort": "Paswọọdụ ga-abụrịrị opekata mpe mkpụrụedemede 8",
-  "accountCreatedSuccessfully": "E mepụtara akaụntụ nke ọma!",
-  "profileSetupComplete": "Ntọala profaịlụ gị zuru ezu",
-  "termsAndConditions": "Ekwenyere m na Usoro na Ọnọdụ",
-  "privacyPolicy": "Ekwenyere m na Iwu Nzuzo",
-  "acceptTerms": "Biko nabata usoro na ọnọdụ",
-  "emailAlreadyExists": "E debanyela email aha",
-  "phoneAlreadyExists": "E debanyela nọmba ekwentị aha",
-  "verificationFailed": "Nkwenye dara ada. Biko nwaa ọzọ",
-  "tryAgain": "Nwaa Ọzọ",
-  "loading": "Na-ebu...",
-  "error": "Njehie",
-  "success": "Ihe Ọga Nke Ọma",
+  "email": "Imel",
+  "phoneNumber": "Nọ́mba Ekwentị",
+  "password": "Okwu Nzuzo",
+  "confirmPassword": "Kuume Okwu Nzuzo",
+  "firstName": "Aha Mbu",
+  "lastName": "Aha Nke Abụọ",
+  "profile": "Profaịlụ",
+  "logout": "Pụta",
+  "save": "Zọọ",
   "cancel": "Kagbuo",
-  "save": "Chekwa",
-  "logout": "Pụọ",
-  "genderMale": "Nwoke",
-  "genderFemale": "Nwanyị",
-  "genderOther": "Ndị Ọzọ",
-  "selectGender": "Họrọ Okike",
-  "welcomeToJourney": "Nnọọ na njem gị",
-  "choosePreferredLanguage": "Họrọ asụsụ ịchọrọ",
-  "choosePreferredMethod": "Họrọ ụzọ ịchọrọ",
-  "createAccountWithEmail": "Mepụta akaụntụ site na email",
-  "createAccountWithPhone": "Mepụta akaụntụ site na ekwentị",
-  "emailSignupTitle": "Mepụta Akaụntụ site na Email",
-  "emailSignupSubtitle": "Tinye email na paswọọdụ gị",
-  "emailAddressLabel": "Adreesị Email",
-  "emailHint": "gi@example.com",
-  "emailRequired": "Email dị mkpa",
-  "invalidEmailFormat": "Usoro email ezighi ezi",
-  "passwordHint": "Tinye paswọọdụ",
-  "passwordRequired": "Paswọọdụ dị mkpa",
-  "confirmPasswordHint": "Kwenye paswọọdụ",
-  "confirmPasswordRequired": "Biko kwenye paswọọdụ",
-  "phoneSignupTitle": "Mepụta Akaụntụ site na Ekwentị",
-  "phoneSignupSubtitle": "Anyị ga-ezigara gị OTP koodu",
-  "phoneNumberLabel": "Nọmba Ekwentị",
-  "phoneNumberHint": "Nọmba ekwentị",
-  "phoneRequired": "Ekwentị dị mkpa",
-  "invalidPhoneForCountry": "Nọmba ekwentị ezighi ezi maka obodo a",
-  "otpInfoMessage": "Anyị ga-ezigara gị OTP koodu iji kwenye nọmba ekwentị gị",
-  "continueText": "Gaa n'ihu",
-  "verifyEmailTitle": "Kwenye Email",
-  "verifyPhoneTitle": "Kwenye Nọmba Ekwentị",
-  "codeSentToEmail": "Tinye koodu anyị zigara {email}",
-  "@codeSentToEmail": {
-    "description": "Message showing where OTP was sent",
-    "placeholders": {
-      "email": {
-        "type": "String"
-      }
-    }
-  },
-  "codeSentToPhone": "Tinye koodu anyị zigara {phone}",
+  "ok": "Echere",
+  "error": "Njehie",
+  "success": "Ịga nke ọma",
+  "loading": "Na-eloadụ...",
+  "tryAgain": "Nwaa Ọzọ",
+  "selectOption": "Biko zọọ otu ihe",
+  "verifyPhoneTitle": "Kọwaa Nọ́mba Ekwentị Gị",
+  "codeSentToPhone": "E zigara koodu ngwaghari nye {phone}",
   "@codeSentToPhone": {
-    "description": "Message showing where OTP was sent",
+    "description": "Message indicating a code was sent",
     "placeholders": {
       "phone": {
-        "type": "String"
+        "type": "String",
+        "example": "+234803..."
       }
     }
   },
-  "codeExpiresIn": "Koodu ga-agwụ na {time}",
+  "codeExpiresIn": "Koodu aghabugo na {minutes} nkeji",
   "@codeExpiresIn": {
-    "description": "Timer showing code expiration",
+    "description": "Message showing code expiration time",
     "placeholders": {
-      "time": {
-        "type": "String"
+      "minutes": {
+        "type": "int",
+        "example": "5"
       }
     }
   },
-  "verify": "Kwenye",
-  "didntReceiveCode": "Ị nataghị koodu? Zigharia ọzọ",
-  "enterAll6Digits": "Biko tinye ọnụọgụgụ 6 niile",
-  "profile": "Profaịlụ",
-  "completeProfile": "Ka mejue profaịlụ gị",
-  "personalizeGuide": "Nke a ga-enyere anyị aka ime ka ntuziaka gburugburu gị bụrụ nke gị",
-  "age": "Afọ",
-  "cycleLength": "Ogologo okirikiri",
-  "days": "Ụbọchị {count}",
-  "averageDaysBetweenPeriods": "Ọnụọgụgụ ụbọchị n'etiti nsọ gị",
-  "lastPeriodDate": "Ụbọchị nsọ ikpeazụ",
-  "selectDate": "Họrọ ụbọchị",
-  "whenLastBleeding": "Mgbe ọbara nsọ gị ikpeazụ malitere",
-  "ttcHistory": "Akụkọ TTC",
-  "faithPreference": "Nhọrọ okwukwe",
-  "language": "Asụsụ",
-  "audioGuidance": "Ntuziaka ọdịyo",
-  "agreeTerms": "Ekwenyere m na Usoro na Iwu Nzuzo",
-  "profileSetupComplete": "Ntọala profaịlụ zuru oke!",
-  "selectOption": "Họrọ nhọrọ",
-  "home": "Ụlọ",
-  "calendar": "Kalenda",
-  "learn": "Mụta",
-  "todaysFertilityInsight": "Nghọta ọmụmụ nwa taa",
-  "nextFertilityWindow": "Windo ọmụmụ nwa gị na-esote sitere na Dec 23",
-  "trackingBenefits": "Site n'ịchọpụta ọmụmụ nwa gị, ị na-enweta nghọta ka mma banyere okirikiri gị.",
-  "stayPositive": "Ị na-eme nke ọma! Nụrụ na-adị mma ma lekwasị anya!",
-  "learnHub": "Ebe mmụta",
-  "logSymptoms": "Debanye aha ihe mgbaàmà",
-  "bleeding": "Ọbara",
-  "mood": "Ọnọdụ obi",
-  "cervicalMucus": "Mmiri cervical",
-  "pain": "Mgbu",
-  "notes": "Ndetu",
-  "loggedSymptoms": "Ihe mgbaàmà edebanyere aha",
-  "educationalContentComingSoon": "Ọdịnaya mmụta na-abịa n'oge adịghị anya",
-  "authInvalidEmail": "Usoro email ezighi ezi",
-  "authInvalidPhone": "Usoro nọmba ekwentị ezighi ezi",
-  "authPasswordTooShort": "Paswọọdụ ga-abụrịrị opekata mpe mkpụrụedemede 8",
-  "authEmailAlreadyRegistered": "E debanyela email aha",
-  "authPhoneAlreadyRegistered": "E debanyela nọmba ekwentị aha",
-  "authInvalidOtpFormat": "Usoro OTP ezighi ezi",
-  "authUserNotFound": "Achọtaghị onye ọrụ",
-  "authNoUserLoggedIn": "Onweghị onye ọrụ banyere",
-  "welcomeBack": "Nnọọ azụ",
-  "logInToAccount": "Banye na akawụntụ gị",
-  "emailAddress": "Adreesi email",
-  "emailHintLogin": "gi@example.com",
-  "passwordLabel": "Paswọọdụ",
-  "enterPassword": "Tinye paswọọdụ",
-  "forgotPassword": "Ị chefuru paswọọdụ?",
-  "logIn": "Banye"
+  "verify": "Kọwaa",
+  "didntReceiveCode": "I sitere waanụ koodu ahụ?",
+  "choosePreferredMethod": "Zọọ ụdị ide akụ́ọtụ ị chọrọ",
+  "createAccountWithEmail": "Mepụta akụ́ọtụ site na Imel",
+  "createAccountWithPhone": "Mepụta akụ́ọtụ site na Ekwentị",
+  "selectDate": "Zọọ Ụbọchị",
+  "continueText": "Gaa n'ihu",
+  "profileSetupComplete": "Ịzikọ profaịlụ ruo ọnụ!",
+  "supportHub": "Ebe Enyemaka",
+  "dailyAffirmation": "Nkwado kwa abalị",
+  "stayPositive": "Nọrọ na mma na ịkwere onwe gị",
+  "exploreCommunityGroups": "Tụọ Ìgwè Ọha",
+  "chooseSupportMode": "Zọọ Ụdị Enyemaka"
 }
-
