--- a/lib/l10n/app_yo.arb
+++ b/lib/l10n/app_yo.arb
@@ -1,184 +1,70 @@
-﻿{
+{
   "@@locale": "yo",
   "appTitle": "Nexus Fertility",
-  "welcomeTitle": "Ẹ káàbọ̀ sí Nexus Fertility",
-  "welcomeSubtitle": "Alágbátà ìmú-ọmọ ara ẹni",
-  "selectLanguage": "Yan Ede",
-  "english": "English",
+  "welcome": "Kaabọ",
+  "home": "Ile",
+  "settings": "Ọn ìseto",
+  "language": "Ede",
+  "english": "Ede Gẹẹsi",
   "yoruba": "Yoruba",
   "igbo": "Igbo",
   "hausa": "Hausa",
   "pidgin": "Pidgin",
-  "german": "Deutsch",
-  "next": "Tẹ̀síwájú",
-  "back": "Padà Síwájú",
-  "skip": "Kọjá",
-  "done": "Tán",
-  "createAccount": "Ṣẹ̀dá Àkàǹtì",
-  "signIn": "Wọlé",
-  "email": "Email",
-  "phoneNumber": "Nọ́ńbà Fóònù",
-  "password": "Ọ̀rọ̀ ìgbaniwọ́le",
-  "confirmPassword": "Jẹ́rìsí Ọ̀rọ̀ ìgbaniwọ́le",
-  "firstName": "Orúkọ Ìbẹ̀rẹ̀",
-  "lastName": "Orúkọ Ìdílé",
-  "dateOfBirth": "Ọjọ́ Ìbí",
-  "selectDate": "Yan Ọjọ́",
-  "profilePicture": "Àwòrán Profáìlì",
-  "uploadPhoto": "Gbé Àwòrán Sókè",
-  "takePhoto": "Yà Àwòrán",
-  "chooseFromGallery": "Yan Látinú Gálárì",
-  "verifyEmail": "Jẹ́rìsí Email",
-  "verifyPhone": "Jẹ́rìsí Nọ́ńbà Fóònù",
-  "enterOTP": "Tẹ OTP",
-  "otpSentTo": "OTP ránṣẹ́ sí {email}",
-  "@otpSentTo": {
-    "description": "Message shown after OTP is sent",
-    "placeholders": {
-      "email": {
-        "type": "String"
-      }
-    }
-  },
-  "resendCode": "Tún Kóòdù Ránṣẹ́",
-  "codeExpires": "Kóòdù yóò parẹ̀ ní {minutes}:{seconds}",
-  "@codeExpires": {
-    "description": "Timer for OTP expiration",
-    "placeholders": {
-      "minutes": {
-        "type": "String"
-      },
-      "seconds": {
-        "type": "String"
-      }
-    }
-  },
-  "invalidEmail": "Jọ̀wọ́ tẹ àdírẹ́sì ẹ̀mèèlì tó tọ́",
-  "invalidPhone": "Jọ̀wọ́ tẹ nọ́ńbà fóònù tó tọ́",
-  "passwordMismatch": "Àwọn Ọ̀rọ̀ ìgbaniwọ́le kò báramu",
-  "passwordTooShort": "Ọ̀rọ̀ ìgbaniwọ́le gbọdọ jẹ́ ó kéré jù látà 8",
-  "accountCreatedSuccessfully": "A ṣẹ̀dá àkàǹtì pẹ̀lú ẹ̀ṣẹ́!",
-  "profileSetupComplete": "Àtòjọ profáìlì rẹ ti parí",
-  "termsAndConditions": "Mo gba àwọn Òfin àti Ìpò",
-  "privacyPolicy": "Mo gba Ìlànà Àṣírí",
-  "acceptTerms": "Jọ̀wọ́ gba àwọn òfin àti ìpò",
-  "emailAlreadyExists": "A ti forúkọsílẹ̀ ẹ̀mèèlì náà tẹ́lẹ̀",
-  "phoneAlreadyExists": "A ti forúkọsílẹ̀ nọ́ńbà fóònù náà tẹ́lẹ̀",
-  "verificationFailed": "Ìjẹ́rìsí kùnà. Jọ̀wọ́ gbìyànjú lẹ́ẹ̀kan sí i",
-  "tryAgain": "Gbìyànjú Lẹ́ẹ̀kan Sí i",
-  "loading": "Ǹ ṣiṣẹ́...",
-  "error": "Àṣìṣe",
-  "success": "Àṣeyọrí",
-  "cancel": "Fagilé",
-  "save": "Fipamọ́",
-  "logout": "Jáde",
-  "genderMale": "Ọkùnrin",
-  "genderFemale": "Obìnrin",
-  "genderOther": "Ọmọ ẹgbẹ́",
-  "selectGender": "Yan Akọ tàbí Abo",
-  "welcomeToJourney": "Ẹ káàbọ̀ sí ìrìnàjò rẹ",
-  "choosePreferredLanguage": "Yan èdè tí o fẹ́ jù",
-  "choosePreferredMethod": "Yan ọna tí o fẹ́ jù",
-  "createAccountWithEmail": "Ṣẹ̀dá Àkàǹtì Nípa Ẹ̀mèèlì",
-  "createAccountWithPhone": "Ṣẹ̀dá Àkàǹtì Nípa Fóònù",
-  "emailSignupTitle": "Ṣẹ̀dá Àkàǹtì Nípa Ẹ̀mèèlì",
-  "emailSignupSubtitle": "Tẹ ẹ̀mèèlì àti ọ̀rọ̀ ìgbaniwọ́le rẹ",
-  "emailAddressLabel": "Àdírẹ́sì Ẹ̀mèèlì",
-  "emailHint": "wọ@àpẹrẹ.com",
-  "emailRequired": "Ẹ̀mèèlì ni dandan",
-  "invalidEmailFormat": "Àdírẹ́sì ẹ̀mèèlì kò tọ́",
-  "passwordHint": "Tẹ ọ̀rọ̀ ìgbaniwọ́le",
-  "passwordRequired": "Ọ̀rọ̀ ìgbaniwọ́le ni dandan",
-  "confirmPasswordHint": "Jẹ́rìsí ọ̀rọ̀ ìgbaniwọ́le",
-  "confirmPasswordRequired": "Jọ̀wọ́ jẹ́rìsí ọ̀rọ̀ ìgbaniwọ́le",
-  "phoneSignupTitle": "Ṣẹ̀dá Àkàǹtì Nípa Fóònù",
-  "phoneSignupSubtitle": "A óò fi OTP kóòdù ránṣẹ́ sí ọ",
-  "phoneNumberLabel": "Nọ́ńbà Fóònù",
-  "phoneNumberHint": "Nọ́ńbà fóònù",
-  "phoneRequired": "Fóònù ni dandan",
-  "invalidPhoneForCountry": "Nọ́ńbà fóònù kò tọ́ fún orílẹ̀-èdè yìí",
-  "otpInfoMessage": "A óò fi OTP kóòdù ránṣẹ́ látí jẹ́rìsí nọ́ńbà fóònù rẹ",
-  "continueText": "Tẹ̀síwájú",
-  "verifyEmailTitle": "Jẹ́rìsí Ẹ̀mèèlì",
-  "verifyPhoneTitle": "Jẹ́rìsí Nọ́ńbà Fóònù",
-  "codeSentToEmail": "Tẹ kóòdù tí a fi ránṣẹ́ sí {email}",
-  "@codeSentToEmail": {
-    "description": "Message showing where OTP was sent",
-    "placeholders": {
-      "email": {
-        "type": "String"
-      }
-    }
-  },
-  "codeSentToPhone": "Tẹ kóòdù tí a fi ránṣẹ́ sí {phone}",
+  "selectLanguage": "Yan ede rẹ",
+  "next": "Atẹle",
+  "back": "Pada sile",
+  "skip": "Fọwọsi",
+  "done": "Ti pari",
+  "createAccount": "Ṣẹda Akọọlẹ",
+  "signIn": "Wọdle",
+  "email": "Imel",
+  "phoneNumber": "Nomba Foonu",
+  "password": "Ọrọ Siri",
+  "confirmPassword": "Tẹnumọ Ọrọ Siri",
+  "firstName": "Oruko Akọkọ",
+  "lastName": "Oruko Ekejii",
+  "profile": "Bayanin Ara",
+  "logout": "Jade",
+  "save": "Tọju",
+  "cancel": "Fagile",
+  "ok": "O",
+  "error": "Asiṣe",
+  "success": "Aṣeyọri",
+  "loading": "Nlo...",
+  "tryAgain": "Gbiyanju Eyi Paapaa",
+  "selectOption": "Jọ̀wọ́ yan ọkan",
+  "verifyPhoneTitle": "Ṣe Àyẹ̀wò Nomba Foonu",
+  "codeSentToPhone": "A ti firanṣẹ koodu ṣayẹ̀wò si {phone}",
   "@codeSentToPhone": {
-    "description": "Message showing where OTP was sent",
+    "description": "Message indicating a code was sent",
     "placeholders": {
       "phone": {
-        "type": "String"
+        "type": "String",
+        "example": "+234803..."
       }
     }
   },
-  "codeExpiresIn": "Kóòdù yóò parẹ̀ ní {time}",
+  "codeExpiresIn": "Koodu yoo pari ni {minutes} akoko",
   "@codeExpiresIn": {
-    "description": "Timer showing code expiration",
+    "description": "Message showing code expiration time",
     "placeholders": {
-      "time": {
-        "type": "String"
+      "minutes": {
+        "type": "int",
+        "example": "5"
       }
     }
   },
-  "verify": "Jẹ́rìsí",
-  "didntReceiveCode": "Kò gbà kóòdù? Tún ránṣẹ́",
-  "enterAll6Digits": "Jọ̀wọ́ tẹ gbogbo nọ́ńbà 6",
-  "profile": "Profáìlì",
-  "completeProfile": "Jẹ́ kí a pari profáìlì rẹ",
-  "personalizeGuide": "Eyi yoo ran wa lọ́wọ́ láti ṣe ìtọ́sọ́na ayipo rẹ ni ara ẹni",
-  "age": "Ọjọ ori",
-  "cycleLength": "Gígùn ayipo",
-  "days": "Ọjọ́ {count}",
-  "averageDaysBetweenPeriods": "Nọ́ńbà àròpín ti àwọn ọjọ́ laarin àwọn akoko oṣù rẹ",
-  "lastPeriodDate": "Ọjọ́ akoko oṣù tó kẹ́hìn",
-  "selectDate": "Yan ọjọ́",
-  "whenLastBleeding": "Nígbàtí ẹjẹ oṣù rẹ tó kẹ́hìn bẹ̀rẹ̀",
-  "ttcHistory": "Ìtàn TTC",
-  "faithPreference": "Yíyàn ìgbàgbọ́",
-  "language": "Ede",
-  "audioGuidance": "Ìtọ́sọ́na ohùn",
-  "agreeTerms": "Mo gba àwọn ofin ati Ilana Asiri",
-  "profileSetupComplete": "Ipari profáìlì ti pari!",
-  "selectOption": "Yan aṣayan",
-  "home": "Ilé",
-  "calendar": "Kalẹ́ndà",
-  "learn": "Kọ́ ẹkọ́",
-  "todaysFertilityInsight": "Ìmọ̀ran ọmúbìnrin ti oni",
-  "nextFertilityWindow": "Fẹ́rèsè ọmúbìnrin rẹ tí n bọ̀ láti Dec 23",
-  "trackingBenefits": "Nípa títọpa ọmúbìnrin rẹ o ní oye tí o dara jùlọ nípa ayipo rẹ.",
-  "stayPositive": "O n ṣe daradara! Dúró ní ìdáyàtọ̀ kí o sì dojúkọ̀!",
-  "learnHub": "Ilé-ìkàwé",
-  "logSymptoms": "Forúkọsílẹ̀ àwọn àmì àìsàn",
-  "bleeding": "Ẹjẹ",
-  "mood": "Ìhùwàsí ọkàn",
-  "cervicalMucus": "Omi ọrun",
-  "pain": "Ìrora",
-  "notes": "Àwọn akọsílẹ̀",
-  "loggedSymptoms": "Àwọn àmì àìsàn tí a forúkọsílẹ̀",
-  "educationalContentComingSoon": "Akoonu ẹkọ n bọ̀ láipẹ́",
-  "authInvalidEmail": "Ọna email kò tọ́",
-  "authInvalidPhone": "Nọ́ńbà fóònù kò tọ́",
-  "authPasswordTooShort": "Ọ̀rọ̀ ìgbaniwọ́le gbọdọ jẹ́ o kéré jù àwọn látà 8",
-  "authEmailAlreadyRegistered": "A ti forúkọsílẹ̀ ẹ̀mèèlì yìí tẹ́lẹ̀",
-  "authPhoneAlreadyRegistered": "A ti forúkọsílẹ̀ nọ́ńbà fóònù yìí tẹ́lẹ̀",
-  "authInvalidOtpFormat": "Ọna OTP kò tọ́",
-  "authUserNotFound": "A kò ríi olùmúlò",
-  "authNoUserLoggedIn": "Kò sí olùmúlò tí o wọlé",
-  "welcomeBack": "Káàbọ̀ padà",
-  "logInToAccount": "Wọlé sí àkàǹtì rẹ",
-  "emailAddress": "Adirẹsi email",
-  "emailHintLogin": "ìwọ@àpẹrẹ.com",
-  "passwordLabel": "Ọ̀rọ̀ ìgbaniwọ́le",
-  "enterPassword": "Tẹ ọ̀rọ̀ ìgbaniwọ́le sí i",
-  "forgotPassword": "Ṣé o gbàgbé ọ̀rọ̀ ìgbaniwọ́le?",
-  "logIn": "Wọlé"
+  "verify": "Ṣe Àyẹ̀wò",
+  "didntReceiveCode": "Ṣe o ko ba ri koodu naa?",
+  "choosePreferredMethod": "Yan ọna yoo fi fe lati kọ akawo nyin",
+  "createAccountWithEmail": "Ṣe akawo pẹlu Imel",
+  "createAccountWithPhone": "Ṣe akawo pẹlu Foonu",
+  "selectDate": "Yan Ọjọ́",
+  "continueText": "Tẹ̀siwaju",
+  "profileSetupComplete": "Ṣiṣẹ bayanin ara gba ipari!",
+  "supportHub": "Ile Iranlowu",
+  "dailyAffirmation": "Ifẹ Ojoojumo",
+  "stayPositive": "Dúró ninu ero rere ati igboya fun ara e",
+  "exploreCommunityGroups": "Ṣe Ayeye Awujo Ibilẹ",
+  "chooseSupportMode": "Yan Ọna Iranlowu"
 }
-
