Complete: Add ARB files and update workflow for reliable localization

--- a/lib/l10n/app_ha.arb
+++ b/lib/l10n/app_ha.arb
@@ -1,74 +1,5 @@
 ﻿{
   "@@locale": "ha",
-  "appTitle": "Nexus Fertility",
-  "welcome": "Barka da zuwa",
-  "home": "Gida",
-  "settings": "Saituna",
-  "language": "Harshe",
-  "english": "Turanci",
-  "yoruba": "Yoruba",
-  "igbo": "Igbo",
-  "hausa": "Hausa",
-  "pidgin": "Pidgin",
-  "selectLanguage": "Zaɓi Harshe",
-  "next": "Gaba",
-  "back": "Baya",
-  "skip": "Tsallake",
-  "done": "Gama",
-  "createAccount": "Ƙirƙiri Asusu",
-  "signIn": "Shiga",
-  "email": "Imel",
-  "phoneNumber": "Lambar Waya",
-  "password": "Kalmar Sirri",
-  "confirmPassword": "Tabbatar da Kalmar Sirri",
-  "firstName": "Suna na Gida",
-  "lastName": "Suna Dangida",
-  "profile": "Bayanin Martaba",
-  "logout": "Fita",
-  "save": "Ajiye",
-  "cancel": "Soke",
-  "ok": "To",
-  "error": "Kuskure",
-  "success": "Nasara",
-  "loading": "Yana lodini...",
-  "tryAgain": "Gwada Sake",
-  "selectOption": "Zaɓi wani zaɓi",
-  "verifyPhoneTitle": "Tabbatar da Lambar Waya",
-  "codeSentToPhone": "An aika lambar tabbatarwa zuwa {phone}",
-  "@codeSentToPhone": {
-    "description": "Message indicating a code was sent",
-    "placeholders": {
-      "phone": {
-        "type": "String",
-        "example": "+234803..."
-      }
-    }
-  },
-  "codeExpiresIn": "Lambar ta ɗau a nan {minutes} minutes",
-  "@codeExpiresIn": {
-    "description": "Message showing code expiration time",
-    "placeholders": {
-      "minutes": {
-        "type": "int",
-        "example": "5"
-      }
-    }
-  },
-  "verify": "Tabbatar",
-  "didntReceiveCode": "Ba ku karbi lambar ba?",
-  "choosePreferredMethod": "Zaɓi hanyar signup da ke so",
-  "createAccountWithEmail": "Ƙirƙiri asusu tare da Email",
-  "createAccountWithPhone": "Ƙirƙiri asusu tare da Waya",
-  "selectDate": "Zaɓi Kwana",
-  "continueText": "Ci gaba",
-  "profileSetupComplete": "Setup bayanin martaba ya gama!",
-  "supportHub": "Gida na Taimakawa",
-  "dailyAffirmation": "Tabbatarwa ta Yau",
-  "stayPositive": "Kasance mai kyau da gaskata a kanka",
-  "exploreCommunityGroups": "Bincika Jama'o'i",
-  "chooseSupportMode": "Zaɓi Hanyar Taimakawa"
+  "appTitle": "Nexus Fertility App",
+  "welcome": "Barka da zuwa"
 }
-
-
-
-
