--- a/lib/l10n/app_ig.arb
+++ b/lib/l10n/app_ig.arb
@@ -1,70 +1,5 @@
-{
+﻿{
   "@@locale": "ig",
-  "appTitle": "Nexus Fertility",
-  "welcome": "Nnọọ",
-  "home": "Ụlọ",
-  "settings": "Ntọgharịba",
-  "language": "Asụsụ",
-  "english": "Bekee",
-  "yoruba": "Yoruba",
-  "igbo": "Igbo",
-  "hausa": "Hausa",
-  "pidgin": "Pidgin",
-  "selectLanguage": "Họrọ Asụsụ Gị",
-  "next": "Ọzọ",
-  "back": "Laa azụ",
-  "skip": "Kpe ekpe",
-  "done": "Mezuo",
-  "createAccount": "Mepụta Akụ́ọtụ",
-  "signIn": "Banye",
-  "email": "Imel",
-  "phoneNumber": "Nọ́mba Ekwentị",
-  "password": "Okwu Nzuzo",
-  "confirmPassword": "Kuume Okwu Nzuzo",
-  "firstName": "Aha Mbu",
-  "lastName": "Aha Nke Abụọ",
-  "profile": "Profaịlụ",
-  "logout": "Pụta",
-  "save": "Zọọ",
-  "cancel": "Kagbuo",
-  "ok": "Echere",
-  "error": "Njehie",
-  "success": "Ịga nke ọma",
-  "loading": "Na-eloadụ...",
-  "tryAgain": "Nwaa Ọzọ",
-  "selectOption": "Biko zọọ otu ihe",
-  "verifyPhoneTitle": "Kọwaa Nọ́mba Ekwentị Gị",
-  "codeSentToPhone": "E zigara koodu ngwaghari nye {phone}",
-  "@codeSentToPhone": {
-    "description": "Message indicating a code was sent",
-    "placeholders": {
-      "phone": {
-        "type": "String",
-        "example": "+234803..."
-      }
-    }
-  },
-  "codeExpiresIn": "Koodu aghabugo na {minutes} nkeji",
-  "@codeExpiresIn": {
-    "description": "Message showing code expiration time",
-    "placeholders": {
-      "minutes": {
-        "type": "int",
-        "example": "5"
-      }
-    }
-  },
-  "verify": "Kọwaa",
-  "didntReceiveCode": "I sitere waanụ koodu ahụ?",
-  "choosePreferredMethod": "Zọọ ụdị ide akụ́ọtụ ị chọrọ",
-  "createAccountWithEmail": "Mepụta akụ́ọtụ site na Imel",
-  "createAccountWithPhone": "Mepụta akụ́ọtụ site na Ekwentị",
-  "selectDate": "Zọọ Ụbọchị",
-  "continueText": "Gaa n'ihu",
-  "profileSetupComplete": "Ịzikọ profaịlụ ruo ọnụ!",
-  "supportHub": "Ebe Enyemaka",
-  "dailyAffirmation": "Nkwado kwa abalị",
-  "stayPositive": "Nọrọ na mma na ịkwere onwe gị",
-  "exploreCommunityGroups": "Tụọ Ìgwè Ọha",
-  "chooseSupportMode": "Zọọ Ụdị Enyemaka"
+  "appTitle": "Nexus Fertility App",
+  "welcome": "Barka da zuwa"
 }
