--- a/lib/l10n/app_pg.arb
+++ b/lib/l10n/app_pg.arb
@@ -1,5 +1,5 @@
 ﻿{
-  "@@locale": "pcm",
+  "@@locale": "pg",
   "appTitle": "Nexus Fertility App",
   "insights": "Insights",
   "calendar": "Kaleda",
