Fixed build issues

--- a/lib/l10n/app_yo.arb
+++ b/lib/l10n/app_yo.arb
@@ -1,21 +1,20 @@
 ﻿{
   "@@locale": "yo",
   "appTitle": "Nexus Fertility",
-  "welcome": "Kaabo",
   "home": "Ile",
   "learn": "Kọ",
-  "insights": "Ikọkọ",
-  "support": "Atilẹyin",
+  "createAccount": "Ṣẹda Account",
+  "choosePreferredMethod": "Yan aṣayan ti o fẹ",
+  "email": "Imeeli",
+  "createAccountWithEmail": "Ṣẹda iroyin pẹlu imeeli",
+  "phoneNumber": "Nọmba foonu",
+  "createAccountWithPhone": "Ṣẹda iroyin pẹlu foonu",
+  "selectOption": "Yan aṣayan",
+  "verifyPhoneTitle": "Ṣayẹwo Foonu",
+  "verify": "Ṣayẹwo",
+  "didntReceiveCode": "Ko gba koodu naa?",
   "profile": "Profaili",
-  "settings": "Eto",
-  "login": "Wọle",
-  "signup": "Forukọsilẹ",
-  "logout": "Jade",
-  "continueText": "Tesiwaju",
-  "cancel": "Fagilee",
-  "save": "Fipamọ",
-  "delete": "Paarẹ",
-  "edit": "Ṣatunkọ",
-  "loading": "O nṣiṣẹ lọwọ..."
+  "selectDate": "Yan ọjọ",
+  "continueText": "Tẹsiwaju",
+  "profileSetupComplete": "Ipilẹṣẹ profaili ti pari"
 }
-
