--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,80 +1,33 @@
 ﻿{
   "@@locale": "en",
-  "@@context": "General",
   "appTitle": "Nexus Fertility",
-  "welcome": "Welcome",
   "home": "Home",
   "learn": "Learn",
-  "insights": "Insights",
-  "support": "Support",
-  "profile": "Profile",
-  "settings": "Settings",
-  "login": "Login",
-  "signup": "Sign Up",
-  "logout": "Logout",
-  "continueText": "Continue",
-  "cancel": "Cancel",
-  "save": "Save",
-  "delete": "Delete",
-  "edit": "Edit",
-  "loading": "Loading...",
-  
-  "@@context": "Auth",
-  "email": "Email",
-  "password": "Password",
-  "confirmPassword": "Confirm Password",
-  "firstName": "First Name",
-  "lastName": "Last Name",
-  "phoneNumber": "Phone Number",
   "createAccount": "Create Account",
-  "forgotPassword": "Forgot Password?",
-  "alreadyHaveAccount": "Already have an account?",
-  "dontHaveAccount": "Don't have an account?",
-  
-  "@@context": "Calendar",
-  "calendar": "Calendar",
-  "today": "Today",
-  "cycleDay": "Cycle Day {day}",
-  "period": "Period",
-  "fertileWindow": "Fertile Window",
-  "ovulation": "Ovulation",
-  "symptoms": "Symptoms",
-  "mood": "Mood",
-  "energy": "Energy",
-  "notes": "Notes",
-  
-  "@@context": "Articles",
-  "articles": "Articles",
-  "readArticle": "Read Article",
-  "playAudio": "Play Audio",
-  "pauseAudio": "Pause Audio",
-  "articleCategoryHealth": "Health & Wellness",
-  "articleCategoryFertility": "Fertility Education",
-  "articleCategoryNutrition": "Nutrition",
-  "articleCategoryMentalHealth": "Mental Health",
-  
-  "@@context": "Chat",
-  "chat": "Chat",
-  "typeMessage": "Type a message...",
-  "send": "Send",
-  "online": "Online",
-  "offline": "Offline",
-  "typing": "typing...",
-  
-  "@@context": "Cultural Guidance",
-  "culturalTips": "Cultural Tips",
-  "religiousConsiderations": "Religious Considerations",
-  "traditionalPractices": "Traditional Practices",
-  "communityGuidance": "Community Guidance",
-  
-  "@@context": "Errors",
-  "error": "Error",
-  "networkError": "Network Error",
-  "serverError": "Server Error",
-  "tryAgain": "Try Again",
-  "invalidEmail": "Invalid email address",
-  "invalidPhone": "Invalid phone number",
-  "passwordTooShort": "Password must be at least 8 characters",
-  "passwordsDontMatch": "Passwords don't match"
+  "choosePreferredMethod": "Choose Preferred Method",
+  "email": "Email",
+  "createAccountWithEmail": "Create Account with Email",
+  "phoneNumber": "Phone Number",
+  "createAccountWithPhone": "Create Account with Phone",
+  "selectOption": "Select Option",
+  "verifyPhoneTitle": "Verify Phone",
+  "verify": "Verify",
+  "didntReceiveCode": "Didn't receive code?",
+  "profile": "Profile",
+  "selectDate": "Select Date",
+  "continueText": "Continue",
+  "profileSetupComplete": "Profile Setup Complete",
+  "authInvalidEmail": "Invalid email address",
+  "authInvalidPhone": "Invalid phone number",
+  "authPasswordTooShort": "Password too short",
+  "authEmailAlreadyRegistered": "Email already registered",
+  "authPhoneAlreadyRegistered": "Phone already registered",
+  "authInvalidOtpFormat": "Invalid OTP format",
+  "authUserNotFound": "User not found",
+  "authNoUserLoggedIn": "No user logged in",
+  "support": "Support",
+  "helpCenter": "Help Center",
+  "contactUs": "Contact Us",
+  "feedback": "Feedback",
+  "logout": "Logout"
 }
-
