--- a/lib/l10n/app_pcm.arb
+++ b/lib/l10n/app_pcm.arb
@@ -1,4 +1,4 @@
-﻿{
+{
   "@@locale": "pcm",
   "appTitle": "Nexus Fertility App",
   "insights": "Insights",
@@ -112,7 +112,7 @@
   "next": "Next",
   "finish": "Finish",
   "skip": "Skip",
-  "continueText": "Continue",
+  "continue": "Continue",
   "start": "Start",
   "pause": "Pause",
   "stop": "Stop",
